tests/errors/unprovable-cons.expect
---CODE---
1
---STDERR---
Error: tests/errors/unprovable-cons.fil
11 |  l0 := L<G, L+1>(left);
   |  ^^^^^^^^^^^^^^^^^^^^^^ Cannot prove fact L+1 > G+1. Component's where clause constraints must be satisfied

